Fixed some alignment issues for features text and sizing faults for headers

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -65,7 +65,7 @@
   }
 
   .nav-mobile-align {
-    @apply md:text-start
+    @apply md:text-left
   }
   
   .nav-mobile-overlay {
